MGNLUI-1158 increased touch target for column resizer, also ensure we get no line wrapping with negative margin to compensate the overflowing width

--- a/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/table.scss
+++ b/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/table.scss
@@ -46,14 +46,14 @@
 }
 
 .v-magnolia-table .v-table-resizer {
-    width:3px;
+    width: 8px;
+    margin-left: -7px;
     height:20px;
     margin-top:10px;
     padding-left:0;
     border-right:1px dotted $c13;
     background:none;
 }
-.v-magnolia-table .v-table-header td:last-child .v-table-resizer {visibility:hidden;}
 
 .v-magnolia-table .v-table-caption-container {
 	color:$c10;
